iptables.rules
# Generated by iptables-save v1.8.4 on Sun Aug 23 07:25:01 2020
*filter
:INPUT ACCEPT [56:6036]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [51:3600]
-A INPUT -d 37.59.0.0/16 -j DROP
-A INPUT -s 37.59.0.0/16 -j DROP
-A INPUT -s 192.168.0.5/32 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 445 -j DROP
-A INPUT -p tcp -m tcp --dport 139 -j DROP
-A INPUT -d 192.168.0.5/32 -j ACCEPT
-A INPUT -s 194.87.0.0/16 -j DROP
-A INPUT -d 194.87.0.0/16 -j DROP
-A INPUT -s 84.161.0.0/16 -j DROP
-A INPUT -d 84.161.0.0/16 -j DROP
-A INPUT ! -s 189.92.229.48/32 -p tcp -m tcp --dport 22 -j DROP
-A INPUT ! -s 189.92.229.48/32 -p tcp -m tcp --dport 4444 -j DROP
-A INPUT -s 189.92.229.48/32 -j ACCEPT
-A INPUT -d 189.92.229.48/32 -j ACCEPT
COMMIT
# Completed on Sun Aug 23 07:25:01 2020
